# TinTerm

./: .gitignore  Cargo.toml  README.md
examples/: gradient_colors.rs  gradient_debug.rs  show_colors.rs  solid_colors.rs
src/: color.rs  color_presets.rs  gradient.rs  lib.rs  text_modifier.rs
